--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -105,7 +105,7 @@ article{
 }
 
 footer{
-    background:transparent;
+    background:#0B0719;
     height:50px;
     font:15px times;
     text-align:center;
