--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -28,8 +28,9 @@ HEADER
 .jumbotron{
     text-align:center;
     margin-bottom:100px;
-    background: url("http://www.justinmaller.com/img/thumbnail/THUMBX_Echoes_kmm1.jpg");
+    background: url("https://i.ytimg.com/vi/SR3kG1K37Ns/maxresdefault.jpg");
     font-family: 'Kelly Slab', cursive;
+    background-size:cover;
 }
 
 .portrait_name{
@@ -53,7 +54,11 @@ background-size:cover;
   max-height:200px;
   max-width:300px;
 }
-
+.thumbnail{
+    background:url('http://i.istockimg.com/file_thumbview_approve/76820669/5/stock-photo-76820669-galaxy.jpg');
+    background-size:cover;
+    color:#0101DF;
+}
 article{
     width:90%;
     margin:0 auto;
@@ -66,9 +71,13 @@ article{
 li{
     height:50px;
 }
-h2{
+h2, h6{
     text-align:center;
+    font-family: Georgia, serif;
     
+}
+p, h3{
+    color:#000000;
 }
 /**********************************
 FOOTER - Layout and Sizing
@@ -98,14 +107,14 @@ Color 1:
 ***********************************/
 
 article{
-    background:transparent ;
-    color:#B40431;
+    background:transparent;
+    color:#0101DF;
     font:impact, italic ;
     
 }
 
 footer{
-    background:#0B0719;
+    background:#0101DF;
     height:50px;
     font:15px times;
     text-align:center;
@@ -113,10 +122,6 @@ footer{
     
 }
 
-.jumbotron{
-  background: url('http://www.justinmaller.com/img/thumbnail/THUMB_Meta_pqqe.jpg') no-repeat center;
-  background-size: cover;
-}
 
 .portrait_name{
     background: rgba(230, 230, 230, 0.7);
