--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -71,13 +71,21 @@ article{
 li{
     height:50px;
 }
-h2, h6{
+ h5{
     text-align:center;
     font-family: Georgia, serif;
+    color:#000000;
     
+}
+h6{
+    font-size:20px;
+    font-family: Georgia, serif;
 }
 p, h3{
     color:#000000;
+}
+h2{
+    color:#5F04B4;
 }
 /**********************************
 FOOTER - Layout and Sizing
