--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -122,7 +122,7 @@ article{
 }
 
 footer{
-    background:#0101DF;
+    background:#5F04B4;
     height:50px;
     font:15px times;
     text-align:center;
